--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -144,34 +144,45 @@
 }
 
 /* rc-drawer */
-.chata-drawer .drawer-content {
-  background: white;
-  border-radius: 4px;
-  overflow: visible;
-}
-.chata-drawer .drawer-handle {
-  background: var(--chata-messenger-background-color);
-  color: #28a8e0; // For default chata logo
-  transition: opacity 0.5s ease;
-  overflow: hidden;
-  width: 50px;
-  height: 50px;
-  border-radius: 50px !important;
-  font-size: 22px;
+.chata-drawer {
+  .drawer-content {
+    background: white;
+    border-radius: 4px;
+    overflow: visible;
 
-  .chata-bubbles-outlined {
-    position: absolute;
-    vertical-align: top;
-    top: 11px;
-    left: 12px;
+    opacity: 1;
+    transition: opacity 0.3s ease;
+  }
 
-    svg {
+  &.closed .drawer-content {
+    opacity: 0;
+  }
+
+  .drawer-handle {
+    background: var(--chata-messenger-background-color);
+    color: #28a8e0; // For default chata logo
+    transition: opacity 0.5s ease;
+    overflow: hidden;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px !important;
+    font-size: 22px;
+
+    .chata-bubbles-outlined {
       position: absolute;
-      width: 26px;
-      height: 26px;
+      vertical-align: top;
+      top: 11px;
+      left: 12px;
+
+      svg {
+        position: absolute;
+        width: 26px;
+        height: 26px;
+      }
     }
   }
 }
+
 .chata-drawer.drawer-right .drawer-handle {
   left: -70px !important;
 }
